Added sections index.html file.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hello</div>
+    <header>
+
+    </header>
+    <main>
+        <input type="text" placeholder="Input a topic or name of post">
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
