--- a/index.html
+++ b/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: #d6d6d6;
+            margin: 0;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+
+        nav{
+            background-color: white;
+            width: 100%;
+            height: 100px;
+            display: flex;
+            align-items: center;
+        }
+
+        img[id="navlogo"]{
+            width: 100px;
+            height: 70px;
+            margin-left: 50px;
+        }
+
+        p[id="title"]{
+            font-size: 30px;
+            margin-left: 64px;
+        }
+
+        ul {
+            list-style-type: none;
+            display: flex;
+            align-items: center;
+        }
+
+        ul li{
+            border-right: 1px solid black;
+            padding-right: 25px;
+            padding-left: 25px;
+            font-size: 20px;
+        }
+
+        ul li a{
+            text-decoration: none;
+            color: black;
+        }
+
+        ul li:first-child{
+            padding-left: 0;
+        }
+
+        ul li:last-child{
+            border-right: none;
+            padding-right: 0;
+        }
+
+    </style>
 </head>
 <body>
     <header>
+        <nav>
+            <img id="navlogo" src="images/placeholder.png" alt="Placeholder Image">
+            <p id="title">BYUI-KNOW</p>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Posts</a></li>
+                <li><a href="index.html">Trending</a></li>
+                <li><a href="index.html">Settings</a></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
