--- a/HTML files/login.html
+++ b/HTML files/login.html
@@ -6,6 +6,45 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img id="navlogo" src="images/placeholder.png" alt="Placeholder Image">
+            <p id="title">BYUI-KNOW</p>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Posts</a></li>
+                <li><a href="index.html">Trending</a></li>
+                <li><a href="index.html">Settings</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Login</h1>
+        <div class="login-panel">
+            <div id="username">
+                <label>Username:</label>
+                <input name="username" type="text">
+            </div>
+            <div id="password">
+                <label>Password:</label>
+                <input name="password" type="text">
+            </div>
+            <button id="login-btn">Login</button>
+        </div>
+    </main>
+    <footer>
+        <p> &copy; Copyright@BYUI-KNOW</p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="Facebook icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="Twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.svg" alt="Instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
