started image carousel on index.html

--- a/HTML files/index.html
+++ b/HTML files/index.html
@@ -71,10 +71,23 @@
                 <li><a href="index.html">Settings</a></li>
             </ul>
         </nav>
-
     </header>
     <main>
-        <input type="text" placeholder="Input a topic or name of post">
+        <section class="hero">
+            <div class="carousel">
+                <div class="carosuel-container">
+                    <img src="../images/placeholder.png" id="item-1" data-index="3">
+                    <img src="../images/placeholder.png" id="item-2" data-index="3">
+                    <img src="../images/placeholder.png" id="item-3" data-index="3">
+                </div>
+                <div class="controls">
+                    <button id="back-btn" data-name="back"></button>
+                    <button id="next-btn" data-name="next"></button>
+                </div>
+            </div>
+            <input type="text" placeholder="Input a topic or name of post">
+        </section>
+        
     </main>
     <footer>
 
