--- a/Website files/index.html
+++ b/Website files/index.html
@@ -58,6 +58,8 @@
         }
 
     </style>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="JS files/image-carousel.js"></script>
 </head>
 <body>
     <header>
@@ -75,13 +77,13 @@
     <main>
         <section class="hero">
             <div class="carousel">
-                <div class="carosuel-container">
-                    <img src="../images/placeholder.png" id="item-1" data-index="3">
-                    <img src="../images/placeholder.png" id="item-2" data-index="3">
-                    <img src="../images/placeholder.png" id="item-3" data-index="3">
+                <div class="carousel-container">
+                    <img src="images/placeholder.png" id="item-1" data-index="3">
+                    <img src="images/placeholder.png" id="item-2" data-index="3">
+                    <img src="images/placeholder.png" id="item-3" data-index="3">
                 </div>
                 <div class="controls">
-                    <button id="back-btn" data-name="back"></button>
+                    <button id="back-btn" data-name="back"><-</button>
                     <button id="next-btn" data-name="next"></button>
                 </div>
             </div>
