worked on image carousel

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -59,7 +59,7 @@
 
     </style>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="JS files/image-carousel.js"></script>
+    <script defer src="JS files/image-carousel.js"></script>
 </head>
 <body>
     <header>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="controls">
                     <button id="back-btn" data-name="back"><-</button>
-                    <button id="next-btn" data-name="next"></button>
+                    <button id="next-btn" data-name="next">-></button>
                 </div>
             </div>
             <input type="text" placeholder="Input a topic or name of post">
