Complete post carousel

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -80,17 +80,17 @@
                 <div id="back-container">
                     <button id="back-btn"><</button>
                 </div>
-                <h1>Trending Now</h1>
+                <!-- <h1>Trending Now</h1> -->
                 <div id="carousel-container">
-                    <div id="post-1" class="posts">
+                    <div class="posts post-1" >
                         <h2>Post title1</h2>
                         <p>post content</p>
                     </div>
-                    <div id="post-2" class="posts">
+                    <div class="posts post-2">
                         <h2>Post title2</h2>
                         <p>post content</p>
                     </div>
-                    <div id="post-3" class="posts">
+                    <div class="posts post-3">
                         <h2>Post title3</h2>
                         <p>post content</p>
                     </div>
