started work on seach bar and make post button

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -59,6 +59,7 @@
 
     </style>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <script defer src="JS files/post-carousel.js"></script>
 </head>
 <body>
@@ -99,11 +100,12 @@
                     <button id="next-btn">></button>
                 </div>
             </div>
-            <div>
+            <div id="search-post-input">
                 <input type="text" placeholder="Input a topic or name of post"> 
+                <span class="material-symbols-outlined" id="search-icon">search</span>
             </div>
-            <div>
-                <button id="create-post-btn">Make your post!</button>
+            <div id="create-post-btn">
+                <button>+Make your post!</button>
             </div>
         </section>
         
