Added recent posts section, search bar, and make post button

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -59,7 +59,8 @@
 
     </style>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
     <script defer src="JS files/post-carousel.js"></script>
 </head>
 <body>
@@ -101,14 +102,32 @@
                 </div>
             </div>
             <div id="search-post-input">
-                <input type="text" placeholder="Input a topic or name of post"> 
-                <span class="material-symbols-outlined" id="search-icon">search</span>
+                <input type="text" placeholder="Search BYUI-KNOW" name="search-term">
+                <button><span class="material-symbols-outlined" id="search-icon">search</span></button> 
             </div>
             <div id="create-post-btn">
-                <button>+Make your post!</button>
+                <button>+ Make your post!</button>
             </div>
         </section>
-        
+        <section class="recent-questions">
+            <h2>Recent Questions</h2>
+            <div id="subpost-container">
+                <div class="subpost">
+                    <span class="material-icons help-icon">help</span>
+                    <div class="subpost-content">
+                        <h3>sub-post title</h3>
+                        <span>hashtag</span>
+                    </div>
+                </div>
+                <div class="subpost">
+                    <span class="material-icons help-icon">help</span>                    
+                    <div class="subpost-content">
+                        <h3>sub-post title</h3>
+                        <span>hashtag</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
