--- a/Website files/index.html
+++ b/Website files/index.html
@@ -4,60 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            background-color: #d6d6d6;
-            margin: 0;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-
-        nav{
-            background-color: white;
-            width: 100%;
-            height: 100px;
-            display: flex;
-            align-items: center;
-        }
-
-        img[id="navlogo"]{
-            width: 100px;
-            height: 70px;
-            margin-left: 50px;
-        }
-
-        p[id="title"]{
-            font-size: 30px;
-            margin-left: 64px;
-        }
-
-        ul {
-            list-style-type: none;
-            display: flex;
-            align-items: center;
-        }
-
-        ul li{
-            border-right: 1px solid black;
-            padding-right: 25px;
-            padding-left: 25px;
-            font-size: 20px;
-        }
-
-        ul li a{
-            text-decoration: none;
-            color: black;
-        }
-
-        ul li:first-child{
-            padding-left: 0;
-        }
-
-        ul li:last-child{
-            border-right: none;
-            padding-right: 0;
-        }
-
-    </style>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
@@ -78,11 +24,11 @@
     </header>
     <main>
         <section class="hero">
+            <h1>Trending Now</h1>
             <div class="carousel">
                 <div id="back-container">
                     <button id="back-btn"><</button>
                 </div>
-                <!-- <h1>Trending Now</h1> -->
                 <div id="carousel-container">
                     <div class="posts post-1" >
                         <h2>Post title1</h2>
