--- a/Website files/index.html
+++ b/Website files/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index-style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
     <script defer src="JS files/post-carousel.js"></script>
@@ -76,7 +76,7 @@
         </section>
     </main>
     <footer>
-
+        <p>Copyright &copy; BYUI-KNOW</p>
     </footer>
 </body>
 </html>
