--- a/Website files/login.html
+++ b/Website files/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="styles/login-style.css">
 </head>
 <body>
     <header>
@@ -12,39 +13,30 @@
             <p id="title">BYUI-KNOW</p>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Posts</a></li>
+                <li><a href="results.html">Posts</a></li>
                 <li><a href="index.html">Trending</a></li>
                 <li><a href="index.html">Settings</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Login</h1>
         <div class="login-panel">
-            <div id="username">
-                <label>Username:</label>
-                <input name="username" type="text">
-            </div>
-            <div id="password">
-                <label>Password:</label>
-                <input name="password" type="text">
-            </div>
-            <button id="login-btn">Login</button>
+            <h1>Login</h1>
+            <form>
+                <div id="username">
+                    <label>Username:</label>
+                    <input name="username" type="text">
+                </div>
+                <div id="password">
+                    <label>Password:</label>
+                    <input name="password" type="text">
+                </div>
+                <button id="login-btn">Login</button>
+            </form>
         </div>
     </main>
     <footer>
-        <p> &copy; Copyright@BYUI-KNOW</p>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="Facebook icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="Twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.svg" alt="Instagram icon">
-            </a>
-        </div>
+        <p>Copyright &copy; BYUI-KNOW</p>
     </footer>
 </body>
 </html>
