--- a/Website files/results.html
+++ b/Website files/results.html
@@ -13,7 +13,7 @@
             <p id="title">BYUI-KNOW</p>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Posts</a></li>
+                <li><a href="results.html">Posts</a></li>
                 <li><a href="index.html">Trending</a></li>
                 <li><a href="index.html">Settings</a></li>
             </ul>
