Started work on 'post' page, linked post button on home page to post page

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BYUI-KNOW</title>
     <link rel="stylesheet" href="styles/index-style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <img id="navlogo" src="images/placeholder.png" alt="Placeholder Image">
-            <p id="title">BYUI-KNOW</p>
+            <p id="title">BYUI-Know</p>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="results.html">Posts</a></li>
@@ -52,7 +52,7 @@
                 <button><span class="material-symbols-outlined" id="search-icon">search</span></button> 
             </div>
             <div id="create-post-btn">
-                <button>+ Make your post!</button>
+                <a href="post.html" target="_blank"><button>+ Make your post!</button></a>
             </div>
         </section>
         <section class="recent-questions">
