--- a/Website files/post.html
+++ b/Website files/post.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>post</title>
+    <title>Create Post - BYUI-Know</title>
+    <link rel="stylesheet" href="styles/post-style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <img id="navlogo" src="images/placeholder.png" alt="Placeholder Image">
+            <p id="title">BYUI-KNOW</p>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="results.html">Posts</a></li>
+                <li><a href="index.html">Trending</a></li>
+                <li><a href="index.html">Settings</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
