--- a/Website files/index.html
+++ b/Website files/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <img id="navlogo" src="images/placeholder.png" alt="Placeholder Image">
-            <p id="title">BYUI-Know</p>
+            <p id="title">BYUI-KNOW</p>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="results.html">Posts</a></li>
