--- a/Website files/post.html
+++ b/Website files/post.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="results.html">Posts</a></li>
                 <li><a href="index.html">Settings</a></li>
+                <li><input type="text" name="search" placeholder="Search..."></li>
             </ul>
         </nav>
     </header>
