implemented post page and staged cerate post page

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -51,7 +51,7 @@
                 <button><span class="material-symbols-outlined" id="search-icon">search</span></button> 
             </div>
             <div id="create-post-btn">
-                <a href="post.html" target="_blank"><button>+ Make your post!</button></a>
+                <a href="create-post.html" target="_blank"><button>+ Make your post!</button></a>
             </div>
         </section>
         <section class="recent-questions">
