--- a/Website files/create-post.html
+++ b/Website files/create-post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BYUI-KNOW</title>
-    <link rel="stylesheet" href="styles/index-style.css">
+    <link rel="stylesheet" href="styles/create-post-style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
     <script defer src="JS files/post-carousel.js"></script>
@@ -18,6 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="results.html">Posts</a></li>
                 <li><a href="index.html">Settings</a></li>
+                <li><input type="text" name="search" placeholder="Search..."></li>
             </ul>
         </nav>
     </header>
