--- a/Website files/index.html
+++ b/Website files/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
     <script defer src="JS files/post-carousel.js"></script>
+    <script defer src="JS files/byuiknowapi.js"></script>
 </head>
 <body>
     <header>
@@ -48,7 +49,7 @@
             </div>
             <div id="search-post-input">
                 <input type="text" placeholder="Search BYUI-KNOW" name="search-term">
-                <button><span class="material-symbols-outlined" id="search-icon">search</span></button> 
+                <button id="search-btn"><span class="material-symbols-outlined" id="search-icon">search</span></button> 
             </div>
             <div id="create-post-btn">
                 <a href="create-post.html" target="_blank"><button>+ Make your post!</button></a>
