--- a/Website files/results.html
+++ b/Website files/results.html
@@ -6,6 +6,7 @@
     <title>Posts - BYUI-KNOW</title>
     <link rel="stylesheet" href="styles/results-style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search"/>
+    <script defer src="JS files/results.js"></script>
   </head>
   <body>
     <header>
