added logo to pages

--- a/Website files/results.html
+++ b/Website files/results.html
@@ -11,7 +11,7 @@
   <body>
     <header>
         <nav>
-            <img id="navlogo" src="images/BYUI-KNOW logo.png" alt="Website logo">
+            <img id="navlogo" src="images/BYUI-KNOW logo.png" alt="Placeholder Image">
             <p id="title">BYUI-KNOW</p>
             <ul>
                 <li><a href="index.html">Home</a></li>
