--- a/Website files/index.html
+++ b/Website files/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <img id="navlogo" src="images/placeholder.png" alt="Placeholder Image">
+            <img id="navlogo" src="images/BYUI-KNOW logo.png" alt="Placeholder Image">
             <p id="title">BYUI-KNOW</p>
             <ul>
                 <li><a href="index.html">Home</a></li>
