load content from db onto carousel, added test connecton+config

--- a/Website files/index.html
+++ b/Website files/index.html
@@ -30,18 +30,7 @@
                     <button id="back-btn"><</button>
                 </div>
                 <div id="carousel-container">
-                    <div class="posts post-1" >
-                        <h2>Post title1</h2>
-                        <p>post content</p>
-                    </div>
-                    <div class="posts post-2">
-                        <h2>Post title2</h2>
-                        <p>post content</p>
-                    </div>
-                    <div class="posts post-3">
-                        <h2>Post title3</h2>
-                        <p>post content</p>
-                    </div>
+                    <!-- JS loads posts here -->
                 </div>
                 <div id="next-container">
                     <button id="next-btn">></button>
